# depth-anything.cpp

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
benchmarks/: BENCHMARK.md  bench.py  demo_terminal.py  make_demo.py  make_plots.py  results.json
benchmarks/demo/: depth_race.py
docs/: EXPORT.md  GPU.md  VERIFICATION.md
examples/cli/: CMakeLists.txt  main.cpp
include/: da_capi.h  da_gguf_keys.h
models/: MODEL_CARD.md  SHA256SUMS
scripts/: convert_da2_to_gguf.py  convert_da3_to_gguf.py  convert_mono_to_gguf.py  convert_nested_to_gguf.py  da2_reference.py  da3_reference.py  download_model.py  dump_da2.py  dump_giant.py  dump_mono.py  dump_nested.py  dump_preproc_real.py  dump_ray_pose.py  dump_rays.py  dump_reference.py  e2e_ray_pose.py  e2e_verify.py  e2e_verify_da2.py  e2e_verify_gs.py  e2e_verify_mv.py  e2e_verify_native.py  e2e_verify_nested.py  gen_gguf_keys_header.py  gguf_keys.py  parity_colmap.py  parity_glb.py  publish_gguf.sh  requirements.txt  test_convert_da2.py  test_convert_roundtrip.py  test_da2_reference.py  test_gguf_keys.py  validate_gpu.sh
src/: backend.cpp  backend.hpp  da_capi.cpp  dino_backbone.cpp  dino_backbone.hpp  dpt_blocks.cpp  dpt_head.cpp  dpt_head.hpp  engine.cpp  engine.hpp  model_loader.cpp  model_loader.hpp
tests/: CMakeLists.txt  colmap_parity_dump.cpp  glb_parity_dump.cpp  test_backbone.cpp  test_backbone_da2.cpp  test_backbone_giant.cpp  test_backbone_metric.cpp  test_backbone_mv.cpp  test_backbone_mv4.cpp  test_backbone_prepare.cpp  test_backend.cpp  test_cam_pose.cpp  test_capi.cpp  test_capi_da2.cpp  test_capi_dense.cpp  test_dpt_blocks.cpp  test_dpt_head.cpp  test_engine_da2.cpp  test_engine_depth.cpp  test_engine_depth_native.cpp  test_engine_metric.cpp  test_engine_mono.cpp  test_engine_mv.cpp  test_engine_pose.cpp  test_fused_depth.cpp  test_ggml_extend.cpp  test_giant_depth_pose.cpp  test_gs_adapter.cpp  test_gs_head.cpp  test_head_rays.cpp  test_metric_head.cpp  test_model_loader.cpp  test_preprocess.cpp  test_preprocess_real.cpp  test_quantize.cpp  test_quantize_accuracy.cpp  test_reconstruct.cpp  test_rope2d.cpp  test_uv_posembed.cpp  test_winograd.cpp
